--- a/demo-cems/src/main/resources/db.properties
+++ b/demo-cems/src/main/resources/db.properties
@@ -1,9 +1,10 @@
 # 数据库 用户名 密码
-url=jdbc:sqlserver://localhost:1433;Databasename=cems
+url=jdbc:sqlserver://localhost:1433;Databasename=UserDatabase
 user=sa
 password=123456
 
 # ini中命令编码【数据表-命令编码】
-historydata1=2051
-hourhistorydata=2081
-dayhistorydata=2091
+分钟数据A=2051
+十分钟报表A=2081
+月报表A=2091
+星星表=6666
