--- a/demo-cems/src/main/resources/table.properties
+++ b/demo-cems/src/main/resources/table.properties
@@ -31,16 +31,14 @@ S02-Min=FVMIN
 S02-Avg=FVAVG
 S02-Max=FVMAX
 S03-Min=TMIN
-S03-Avg=TS
+S03-Avg=T
 S03-Max=TMAX
 S05-Min=HMMIN
 S05-Avg=HMS
 S05-Max=HMMAX
-S07-Min=MJMIN
-S07-Avg=MJAVG
-S07-Max=MJMAX
+S07-Avg=MJ
 S08-Min=PMIN
-S08-Avg=PS
+S08-Avg=P
 S08-Max=PMAX
 10-Min=NH3MIN
 10-Avg=NH3AVG
